--- a/app/src/main/res/layout/item_messages_chat.xml
+++ b/app/src/main/res/layout/item_messages_chat.xml
@@ -6,9 +6,9 @@
     android:orientation="vertical"
     >
 
-    <include layout="@layout/item_message_send"
-        android:visibility="gone"
-        />
+    <include
+        layout="@layout/item_message_send"
+        android:visibility="gone" />
 
     <include layout="@layout/item_message_recieve"
         android:visibility="gone"
