--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -3,6 +3,6 @@
     <gradient
         android:angle="90"
         android:endColor="#FF416C"
-        android:startColor="#FF4B2B"
+        android:startColor="@color/red_primary"
         android:type="linear" />
 </shape>
