--- a/app/src/main/res/layout/activity_add_pic.xml
+++ b/app/src/main/res/layout/activity_add_pic.xml
@@ -138,14 +138,15 @@
                             android:src="@drawable/register_photo_2" />
 
 
-                        <TextView android:textSize="@dimen/x_normal_font"
-                            android:textColor="@color/white_normal"
-                            android:gravity="center"
-                            android:background="@color/orange_ff8806"
+                        <TextView
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
-                            android:text="@string/string_bad"
-                            android:fontFamily="@font/avenir_next_demibold" />
+                            android:background="@color/orange_ff8806"
+                            android:fontFamily="@font/avenir_next_demibold"
+                            android:gravity="center"
+                            android:text="Not Good"
+                            android:textColor="@color/white_normal"
+                            android:textSize="@dimen/x_normal_font" />
 
                     </LinearLayout>
 
