--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -62,15 +62,20 @@
         android:layout_marginTop="16.0dip" android:layout_marginBottom="24.0dip"
         android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip">
 
-        <TextView android:textSize="16.0sp" android:textColor="#ffffffff"
-            android:gravity="center" android:layout_gravity="center"
+        <TextView
             android:id="@+id/tv_send_common_msg"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="center"
             android:layout_marginLeft="@dimen/dp8"
             android:layout_marginRight="@dimen/dp8"
             android:background="@drawable/shape_corner_44dp_purple_5158ff_solid"
-            android:visibility="gone" android:layout_width="fill_parent"
-            android:layout_height="fill_parent" android:text="@string/send_message"
-            android:fontFamily="@font/avenir_next_bold" />
+            android:fontFamily="@font/avenir_next_bold"
+            android:gravity="center"
+            android:text="@string/send_message"
+            android:textColor="#ffffffff"
+            android:textSize="16.0sp"
+            android:visibility="gone" />
 
     </FrameLayout>
 
