--- a/app/src/main/res/layout/activity_nearby.xml
+++ b/app/src/main/res/layout/activity_nearby.xml
@@ -29,13 +29,13 @@
             android:layout_height="44.0dip"
             android:src="@drawable/icon_left_back_arrow" />
 
-        <ImageView
-            android:layout_gravity="center_vertical"
-            android:id="@+id/imgvNearbyReturnLastItem"
-            android:layout_width="44.0dip"
-            android:layout_height="44.0dip"
-            android:visibility="gone"
-            android:src="@drawable/icon_back_last_title" />
+            <ImageView
+                android:id="@+id/imgvNearbyReturnLastItem"
+                android:layout_width="44.0dip"
+                android:layout_height="44.0dip"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/icon_back_last_title"
+                android:visibility="gone" />
 
         </LinearLayout>
 
@@ -64,22 +64,22 @@
         />
 
 
-
-
     <TextView
+        android:id="@+id/tvNopeopleNearby"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/near_no_people"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:fontFamily="@font/avenir_next_demibold"
         android:gravity="center"
-        android:textSize="@dimen/xxx_large_font"
         android:lines="2"
         android:maxLines="2"
-        android:layout_margin="20dp"
-        android:visibility="visible"
-        android:id="@+id/tvNopeopleNearby"
-        android:fontFamily="@font/avenir_next_demibold"
+        android:text="@string/near_no_people"
         android:textColor="@color/black72"
-        />
+        android:textSize="@dimen/xxx_large_font"
+        android:visibility="visible" />
 
 
     <com.yuyakaido.android.cardstackview.CardStackView
@@ -87,9 +87,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/llLikeBar"
-        android:visibility="visible"
         android:layout_below="@+id/fltoolbarfilter"
-        android:clipToPadding="false" />
+        android:clipToPadding="false"
+        android:visibility="visible" />
 
     <LinearLayout
         android:id="@+id/llLikeBar"
@@ -143,10 +143,8 @@
     </LinearLayout>
 
 
-
-
-    <include layout="@layout/dialog_nearby_filter"
-        android:visibility="gone"
-        />
+    <include
+        layout="@layout/dialog_nearby_filter"
+        android:visibility="gone" />
 
 </RelativeLayout>
