--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -58,7 +58,7 @@
 
     <TextView
         android:textSize="@dimen/x_normal_font"
-        android:textColor="@color/blue_cc3edbff"
+        android:textColor="@color/colorPrimary"
         android:layout_gravity="center_horizontal"
         android:id="@+id/tvSendMsgUserProfile"
         android:layout_width="wrap_content"
