--- a/app/src/main/res/layout/item_message_videocall_recieve.xml
+++ b/app/src/main/res/layout/item_message_videocall_recieve.xml
@@ -24,17 +24,21 @@
         android:id="@+id/rl_recycle_chat_send_content"
         android:layout_width="wrap_content" android:layout_height="wrap_content">
 
-        <TextView android:textSize="@dimen/x_normal_font"
-            android:textColor="@color/white_normal"
+        <TextView
             android:id="@+id/tvInMessageTextChat"
-            android:background="@drawable/his_msg_videocall_bg"
-            android:paddingTop="6.0dip" android:paddingBottom="6.0dip"
-            android:layout_width="wrap_content" android:layout_height="wrap_content"
-            android:textIsSelectable="true" android:paddingStart="10.0dip"
-            android:paddingEnd="10.0dip" android:layout_alignParentEnd="false"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="false"
             android:layout_marginTop="@dimen/dp2"
             android:layout_marginBottom="@dimen/dp2"
-            />
+            android:background="@drawable/his_msg_videocall_bg"
+            android:paddingStart="10.0dip"
+            android:paddingTop="6.0dip"
+            android:paddingEnd="10.0dip"
+            android:paddingBottom="6.0dip"
+            android:textColor="@color/white_normal"
+            android:textIsSelectable="true"
+            android:textSize="@dimen/x_normal_font" />
 
 
     </RelativeLayout>
